force-app/main/default/objects/BusinessTripVisitEvent__c/BusinessTripVisitEvent__c.object-meta.xml
<CustomObject>
    <label>Visit Event</label>
    <nameField>
        <displayFormat>BTVE-{00000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>