force-app/main/default/objects/BusinessTripVisitEvent__c/fields/BusinessTripVisit__c.field-meta.xml
<CustomField>
    <fullName>BusinessTripVisit__c</fullName>
    <label>Business Trip Visit</label>
    <referenceTo>BusinessTripVisit__c</referenceTo>
    <relationshipName>Business_Trip_Visit_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>