force-app/main/default/objects/BusinessTripVisitEvent__c/fields/Other_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Type__c</fullName>
    <label>Other Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>