force-app/main/default/objects/BusinessTripVisitEvent__c/fields/OtherType__c.field-meta.xml
<CustomField>
    <fullName>OtherType__c</fullName>
    <label>Other Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>