force-app/main/default/objects/BusinessTripVisitEvent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REQUESTED</fullName>
                <label>Requested</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>REJECTED</fullName>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>